# python-sdk

./: .drone.yml  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
happydomain/: __init__.py  admin.py  api.py  authuser.py  domain.py  error.py  provider.py  service.py  zone.py
